# docker-compose-mcp

./: .coverage  .deepsource.toml  .gitignore  CLAUDE.md  LICENSE  README.md  RECREATE_PROJECT.md  codecov.yml  coverage.json  mcp_docker_server.py  pyproject.toml  requirements.txt
.github/: renovate.json
.github/workflows/: build.yml  reviewdog.yml  security.yml  style.yml
docker_compose_mcp/: __init__.py  __main__.py
tests/: __init__.py  test_docker_compose_manager.py  test_mcp_integration.py
tests/fixtures/test-project/: docker-compose.yml
